octocrab-derive/tests/ui/03-no-fields.stderr
error: only named fields supported
 --> $DIR/03-no-fields.rs:4:16
  |
4 | struct Test<'a>(&'a str);
  |                ^^^^^^^^^
